--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -1,7 +1,7 @@
 Name: erlang
 Cartridge-Short-Name: ERLANG
-Display-Name: Do-It-Yourself 0.1
-Description: "The Do-It-Yourself (ERLANG) application type is a blank slate for trying unsupported languages, frameworks, and middleware on OpenShift. See the community site for examples of bringing your favorite framework to OpenShift."
+Display-Name: Erlang 0.1
+Description: "Use Erlang on OpenShift"
 Version: '0.1'
 License: "ASL 2.0"
 License-Url: http://www.apache.org/licenses/LICENSE-2.0.txt
