--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -5,10 +5,9 @@ Description: "Use Erlang on OpenShift"
 Version: '0.1'
 License: "ASL 2.0"
 License-Url: http://www.apache.org/licenses/LICENSE-2.0.txt
-Cartridge-Version: 0.0.3
-Compatible-Versions: [0.0.1, 0.0.2]
-Cartridge-Vendor: redhat
-Vendor: redhat
+Cartridge-Version: 0.1
+Cartridge-Vendor: lsm5
+Vendor: lsm5
 Categories:
   - web_framework
   - experimental
