--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -5,6 +5,7 @@ Description: "Use Erlang on OpenShift"
 Version: '0.1'
 License: "ASL 2.0"
 License-Url: http://www.apache.org/licenses/LICENSE-2.0.txt
+Source-Url: https://github.com/lsm5/openshift-origin-cartridge-erlang.git
 Cartridge-Version: 0.1
 Cartridge-Vendor: lsm5
 Vendor: lsm5
